Bug #1258 hg creation - layout issues with different languages
git-svn-id: https://build.archivesportaleurope.net/svn/apex/trunk@3098 9fd842fd-667d-44da-918d-ff91420b3ae1

--- a/Dashboard/src/main/webapp/css/hgSgTreeCreation.css
+++ b/Dashboard/src/main/webapp/css/hgSgTreeCreation.css
@@ -15,7 +15,7 @@
 
 .contextMenu {
 	position: absolute;
-	width: 440px;
+	width: auto;
 	z-index: 99999;
 	border: solid 1px #CCC;
 	background: #EEE;
@@ -37,7 +37,8 @@
 .contextMenu a {
 	color: #333;
 	text-decoration: none;
-	display: block;
+/* 	display: block; */
+	display: inline-block;
 	line-height: 20px;
 	height: 20px;
 	background-position: 6px center;
